--- a/src/AppBundle/Resources/config/doctrine/Institution.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Institution.orm.yml
@@ -12,7 +12,7 @@ AppBundle\Entity\Institution:
         address:
             type: string
             length: 100
-    oneToOne:
+    manyToOne:
         type:
           targetEntity: InstitutionType
           joinColumn:
