ORM: int -> integer and regenerate DB SQL

--- a/src/AppBundle/Resources/config/doctrine/Donation.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Donation.orm.yml
@@ -7,7 +7,7 @@ AppBundle\Entity\Donation:
             generator: { strategy: AUTO }
     fields:
         count:
-            type: int
+            type: integer
     manyToOne:
         user:
             targetEntity: User
