--- a/src/AppBundle/Resources/config/doctrine/WishList.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/WishList.orm.yml
@@ -17,7 +17,7 @@ AppBundle\Entity\WishList:
         announce_text:
             type: text
         year:
-            type: int
+            type: integer
     manyToOne:
         status:
             targetEntity: Status
