--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,12 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+hwi_oauth:
+    # list of names of the firewalls in which this bundle is active, this setting MUST be set
+    firewall_names: [secured_area]
+    resource_owners:
+        any_name:
+            type:                facebook
+            client_id:           "%facebook_id%"
+            client_secret:       "%facebook_secret%"
