--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,17 +8,17 @@ security:
             memory: ~
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        main:
+        secured_area:
             anonymous: ~
-            # activate different ways to authenticate
+            oauth:
+                resource_owners:
+                    facebook:     "/login/check-facebook"
+                login_path:        /login
+                use_forward:       false
+                failure_path:      /login
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
+                oauth_user_provider:
+                    service: hwi_oauth.user.provider
 
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
