Region: Add the `svg_id` field

--- a/src/AppBundle/Resources/config/doctrine/Region.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Region.orm.yml
@@ -9,3 +9,6 @@ AppBundle\Entity\Region:
         name:
             type: string
             length: 100
+        svg_id:
+            type: string
+            length: 5
