--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,17 +8,5 @@ security:
             memory: ~
 
     firewalls:
-        secured_area:
+        main:
             anonymous: ~
-            oauth:
-                resource_owners:
-                    facebook:     "/login/check-facebook"
-                login_path:        /login
-                use_forward:       false
-                failure_path:      /login
-
-                oauth_user_provider:
-                    service: hwi_oauth.user.provider
-
-    access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
